MoinMoin/themes/foobar/static/css/common.css
/* ... */
a.moin-telnet:before,a.moin-ssh:before,a.moin-irc:before,a.moin-ircs:before{content:url("../img/moin-telnet.png");margin:0 .2em;vertical-align:middle}
a.moin-mailto:before{content:url("../img/moin-email.png");margin:0 .2em;vertical-align:middle}
a.moin-attachment:before{content:url("../img/moin-attach.png");margin:0 .2em;vertical-align:middle}
a.moin-interwiki:before{content:url("../img/moin-inter.png");margin:0 .2em;vertical-align:middle}
a.moin-action:before{content:url("../img/moin-action.png");margin:0 .2em;vertical-align:middle}
a.moin-mime-text:before{content:url("../img/moin-text.png");margin:0 .2em;vertical-align:middle}
a.moin-mime-image:before{content:url("../img/moin-image.png");margin:0 .2em;vertical-align:middle}
a.moin-mime-audio:before{content:url("../img/moin-audio.png");margin:0 .2em;vertical-align:middle}
a.moin-mime-video:before{content:url("../img/moin-video.png");margin:0 .2em;vertical-align:middle}
a.moin-mime-application:before{content:url("../img/moin-application.png");margin:0 .2em;vertical-align:middle}
a.moin-mime-pdf:before{content:url("../img/moin-pdf.png");margin:0 .2em;vertical-align:middle}
a.moin-mime-package:before{content:url("../img/moin-package.png");margin:0 .2em;vertical-align:middle}
a.moin-mime-drawing:before{content:url("../img/moin-drawing.png");margin:0 .2em;vertical-align:middle}
.moin-diff{width:99%;table-layout:fixed;margin:.3em}
.moin-diff-header{vertical-align:top;font-size:92%}
.moin-diff-info{margin:.33em .25em}
.moin-diff-info-value{white-space:normal}
.moin-diff-info-caption{display:inline-block;min-width:5em}
.moin-diff-line-number{background-color:#ffe6e6}
.moin-diff-added{background-color:#e0ffe0;vertical-align:top;width:50%;white-space:pre-wrap;word-wrap:break-word;font-family:monospace;}
.moin-diff-added span{background-color:#80ff80}
.moin-diff-removed{background-color:#ffffe0;vertical-align:top;width:50%;white-space:pre-wrap;word-wrap:break-word;font-family:monospace;}
.moin-diff-removed span{background-color:#ffff80}
body{color:#000;background-color:#d6d5d0;font-family:verdana,sans-serif;background-image:url("../img/base.png")}
div p{margin:.5em .2em}
#moin-global-tray{float:left;width:16.666666666666668%;padding:.5%;overflow:hidden}
#moin-main-container{float:left;width:81.13333333333333%;padding:.5%}
#moin-main-box{background-color:#f0f0f0;border:1px solid #ccc;border-radius:6px;box-shadow:2px 2px 4px #9d9d9b;overflow:hidden}
#moin-header{background-color:#2c2c2a;color:#fff;border-bottom:1px solid #ccc;padding:.2% .5%;overflow:auto;}
#moin-header a{color:#fff}
#moin-content-no-panel{float:left;width:98.56746096959736%;padding:.6162695152013148%;border-right:1px solid #ccc}
#moin-content-with-panel{float:left;width:76.79260476581759%;padding:.6162695152013148%;border-right:1px solid #ccc}
#moin-local-panel{float:left;width:20.54231717337716%;padding:.6162695152013148%;margin-left:-1px;border-left:1px solid #ccc}
#moin-footer{clear:both;font-size:.8em;color:#616161;padding:.5% .5%;overflow:auto}
#moin-breadcrumbs-location{float:left;padding:.3em .5em .2em .5em;font-weight:bold}
#moin-pagelocation{vertical-align:middle}
.moin-pagepath{vertical-align:middle}
#moin-search{float:right;padding:.3em .5em .2em .5em}
#moin-search-submit{vertical-align:middle}
#moin-logo{width:100%;padding:0 0 1em 0;}
#moin-logo a{display:block;width:100%;height:70px;background-repeat:no-repeat;background-position:center center}
#moin-global-panel ul,#moin-local-panel ul{list-style-type:none;margin:0;}
#moin-global-panel ul li,#moin-local-panel ul li{background-color:#2c2c2a;font-size:1em;color:#fff;font-weight:bold;padding:.5em;border:1px solid #ccc;border-radius:4px;box-shadow:1px 1px 2px #9d9d9b;margin-left:.5em;margin-bottom:.5em;overflow:hidden;word-wrap:break-word;}
#moin-global-panel ul li ul,#moin-local-panel ul li ul{padding:.2em .1em;}
#moin-global-panel ul li ul li,#moin-local-panel ul li ul li{font-size:.8em;color:#fff;font-weight:normal;padding:.1em .1em .1em .1em;border:none;box-shadow:none;margin:0}
#moin-footer ul,#moin-credits{float:left;list-style-type:none;}
#moin-footer ul li,#moin-credits li{padding:.1em}
#moin-footer ul a,#moin-credits a{color:#616161}
#moin-footer-logos{float:right;}
#moin-footer-logos ul li{display:inline}
label{display:block;font-weight:bold}
button{background:#d6d5d0;padding:3px 5px;border:1px solid #ccc;border-radius:2px;box-shadow:1px 1px 2px #9d9d9b;cursor:pointer;}
button:hover{box-shadow:1px 1px 2px #000}
input,select{padding:3px;background:#f0f0f0;border:1px solid #ccc;border-radius:2px}
input[type="text"]{width:300px}
input[type="submit"],input[type="button"]{background:#d6d5d0}
input.blank{border-color:#ccc;border-width:2px}
.moin-form dd{margin-bottom:1em;}
.moin-form dd input{width:20em}
.moin-form dt label.required:after{content:'*';color:#000}
#moin-create-table{width:95%;margin-left:auto;margin-right:auto;}
#moin-create-table tbody tr th{text-align:center;background:#d0d0d0;margin:2px}
#moin-create-table tbody tr td{text-align:center;background:#f0f0f0;}
#moin-create-table tbody tr td a{color:#000}
.moin-clr{clear:both}
.moin-index-message{width:50%;margin:1em auto;text-align:center;display:none;}
.moin-index-message span{padding:4px;background-color:#007cef;color:#fff;border:1px solid #ccc;border-radius:5px}
.moin-download-link{display:none}
.moin-index-path{margin-left:.5em;}
.moin-index-path:before{content:url("../img/moin-parent.png");margin:0 .3em}
#moin-initials{width:90%;margin:5px auto;text-align:center;}
#moin-initials a{display:inline-block;margin:0;padding:4px 5px;}
#moin-initials a:hover,#moin-initials a.selected{background:#4fa8fa;border-radius:5px;color:#fff;text-decoration:none}
.moin-item-index{width:100%;margin-left:.5em;}
.moin-item-index div{float:left;width:15em;}
.moin-item-index div .moin-select-item{visibility:hidden;display:inline-block;vertical-align:middle;width:17px;cursor:default;background:transparent url("../img/moin-checkbox-off.png") no-repeat}
/* ... */

